--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
